--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon ./dist/app.js",
+    "start": "nodemon ./dist/app.js",
     "compile": "tsc -w"
   },
   "author": "",
@@ -21,7 +22,7 @@
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
-    "typescript": "^4.9.4",
+    "typescript": "^5.0.4",
     "validator": "^13.7.0"
   },
   "devDependencies": {
