--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon ./dist/app.js",
-    "start": "nodemon ./dist/app.js",
+    "start": "tsc && node ./dist/app.js",
     "compile": "tsc -w"
   },
   "author": "",
